# TModeler

./: .gitignore  README.md
cpp/: .gitmodules  CMakeLists.txt  README.md
cpp/adapters/Qt/: CMakeLists.txt  TItem.hpp  TVM.hpp  TViewModel.hpp
cpp/include/core/: Tclass.h  Tob.h  Tob.hpp  Treflexion.h  Tserial.h
cpp/include/db/: Tdb.h  TdbObserver.h  Tsqlite.h  Ttable.h
cpp/include/field/: TBaseField.h  TBaseField.hpp  TField.h  TField.hpp  TFields.hpp  TFloatField.hpp  TIntField.hpp  TJsonField.hpp  TJsonTools.h  TModelField.hpp  TTextField.hpp  TTimeField.hpp  Tx.h
cpp/include/model/: TMatrix.h  TMobserver.h  TModel.h  TModel.hpp  TMserializer.h
cpp/include/modeler/: TM.h
cpp/include/ms/: TFilterBuilder.h  TResult.h  TitemCreate.hpp  TitemDelete.h  TitemDelete.hpp  TitemLoad.h  TitemLoad.hpp  TitemUpdate.h  TitemUpdate.hpp  Tlist.h  Tlist.hpp  TmObserver.h  Tms.h  Tms.hpp  TmsAdapter.hpp  TmsCrud.hpp  TmsDeep.hpp  TmsFilter.hpp  TmsObserver.hpp
cpp/tests/msvc/: CMakeLists.txt  main.cpp
cpp/tests/qtcreator/: CMakeLists.txt  Main.qml  Models.h  clientgenerator.cpp  clientgenerator.h  main.cpp  models.cpp  viewmodels.hpp
cpp/tests/unit/: Models.h  main.cpp
cpp_/include/core/: Tclass.h  Tob.h
cpp_/include/field/: TBoolField.hpp  TListField.hpp  TModelField.hpp
cpp_/include/model/: TMatrix.hpp  TModel.h
cpp_/include/modeler/: TMProvider.h  TModeler.h
cpp_/include/ms/: TFilterBuilder.h  TitemCreate.h  TitemDelete.hpp  Tms.hpp  TmsDeep.hpp
java/: README.md
java/TestsTM/app/: build.gradle.kts
java/TestsTM/app/src/main/java/com/tm/tests/: MainActivity.kt
java/TestsTM/app/src/main/java/com/tm/tests/models/chat/chanels/: Chanel.java  ChanelContext.java
java/TestsTM/app/src/main/java/com/tm/tests/models/chat/messages/: Message.java
java/TestsTM/app/src/main/java/com/tm/tests/models/chat/messagins/: Messaging.java
java/TestsTM/app/src/main/java/com/tm/tests/models/utils/: TMedia.java
java/tests/android-jetpack-compose/app/src/main/: AndroidManifest.xml
java/tests/android-jetpack-compose/app/src/main/java/com/tm/tests/_launcher/: App.java
java/tests/android-jetpack-compose/app/src/main/java/com/tm/tests/models/chat/chanels/: ChanelEditor.java  ChanelType.java
java/tests/android-jetpack-compose/app/src/main/java/com/tm/tests/models/chat/massagers/: Messager.java  MessagerRole.java
java/tests/android-jetpack-compose/app/src/main/java/com/tm/tests/models/chat/messagins/: MessagingMember.java  MessagingType.java
java/tests/android-jetpack-compose/gradle/wrapper/: gradle-wrapper.properties
python/: README.md
